--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
  
  server.port=8888
+
+#swagger configuration
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
